work in progress 1

--- a/style_guide/index.html
+++ b/style_guide/index.html
@@ -17,20 +17,47 @@
 		
 	<section>
 		<h1>Typography</h1>
+		<h2>Boldonse</h2> 
         <div class="outer_wrapper">
           <div class="inner">
-            <p>
+            <p1>
               ABCDEFGHIJKLMNOPQRSTUVWXYZ <br/>
               abcdefghijklmnopqrstuvwxyz <br/>
               1234567890!?&#
-              </p>
+              </p1>
+			  
             </div>
           <div class="inner">
-            <p>
+            <p1>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et purus rutrum, porta metus id, efficitur eros. Aenean leo mi, semper vitae elit sed, semper lobortis ante. Maecenas condimentum auctor urna, in ultrices neque. Ut dignissim ac dui id sagittis. Donec lacus magna, ultrices non convallis in, dignissim vitae lorem. Nullam quam odio, aliquam id ultrices at, pretium sit amet mi. Quisque feugiat pulvinar dictum. Praesent laoreet vel est ut suscipit. Nullam interdum pretium justo, sed porttitor augue convallis quis. Donec sapien urna, lacinia ut tincidunt sed, ultrices nec neque. Vivamus tristique pulvinar enim sit amet semper. In hac habitasse platea dictumst.
-              </p>
+              </p1>
             </div>
         </div>
+		
+		
+		
+		<figure></figure>
+		
+		<h3>Roboto</h3> 
+        <div class="outer_wrapper">
+          <div class="inner">
+            <p3>
+              ABCDEFGHIJKLMNOPQRSTUVWXYZ <br/>
+              abcdefghijklmnopqrstuvwxyz <br/>
+              1234567890!?&#
+              </p3>
+			  
+            </div>
+          <div class="inner">
+            <p3>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et purus rutrum, porta metus id, efficitur eros. Aenean leo mi, semper vitae elit sed, semper lobortis ante. Maecenas condimentum auctor urna, in ultrices neque. Ut dignissim ac dui id sagittis. Donec lacus magna, ultrices non convallis in, dignissim vitae lorem. Nullam quam odio, aliquam id ultrices at, pretium sit amet mi. Quisque feugiat pulvinar dictum. Praesent laoreet vel est ut suscipit. Nullam interdum pretium justo, sed porttitor augue convallis quis. Donec sapien urna, lacinia ut tincidunt sed, ultrices nec neque. Vivamus tristique pulvinar enim sit amet semper. In hac habitasse platea dictumst.
+              </p3>
+            </div>
+        </div>
+		
+		
+		
+		
 		
 	</section>	
 		
